ui of this project is completed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,27 +1,22 @@
+@import url("https://v1.fontapi.ir/css/Estedad:500;600");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body{
+  font-family: Estedad, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.bg-Orange {
+  @apply bg-[#FFE7DF] text-[#FE3E01];
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.bg-secondary {
+  @apply bg-[#FE3E01];
+}
+.text-primary {
+  @apply text-[#0182FE];
+}
+.bg-primary {
+  @apply bg-[#0182FE];
 }
